# PYTHON_COURSE_3_1

./: .gitignore  README.md  main.py  pyproject.toml
data/: portfolios.json  rates.json  users.json
src/finalproject_khlystikov_m25_555/: cli.py
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
