[tool.poetry]
name = "finalproject_khlystikov_m25_555"
version = "0.1.0"
description = "Console currency wallet (educational project)"
authors = ["khlystikov"]
readme = "README.md"
packages = [{ include = "finalproject_khlystikov_m25_555", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.2"

[tool.poetry.scripts]
project = "finalproject_khlystikov_m25_555.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"